--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,18 +81,24 @@
 
 html,
 body {
-  max-width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
+  height: 100%;
+  min-height: 100%;
+  margin: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 6rem;
+  min-height: 100vh;
 }
 
 a {
