--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -97,8 +97,9 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem;
+  padding: 0;
   min-height: 100vh;
+  width: 100%;
 }
 
 a {
