--- a/src/app/category/page.module.scss
+++ b/src/app/category/page.module.scss
@@ -2,21 +2,23 @@
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 30px;
+  padding: 30px 50px;
   display: flex;
   flex: 1;
   flex-direction: column;
   align-items: center;
 }
 
-.searchBar {
+.titleBox {
+  width: 1000px;
   display: flex;
-  flex: 1;
+  margin-bottom: 30px;
 }
 
-.contentBox {
+.bookList {
+  width: 1000px;
   display: flex;
-  flex: 2;
-  flex-direction: column;
-  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding-bottom: 30px;
 }
